# lazychacha-rs

./: Cargo.toml  Makefile  README.md
benches/: lazychacha_benchmark.rs
src/: lazychacha.rs  lib.rs
