[package]
name = "lazychacha"
description = "Lazy ChaCha20-Poly1305 in Rust base on RustCrypto: ChaCha20Poly1305."
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
keywords = ["lazychacha", "chacha"]
repository = "https://github.com/prongbang/lazychacha-rs"
exclude = ["Makefile", ".gitignore", "/target/"]

[dependencies]
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
faster-hex = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "lazychacha_benchmark"
harness = false
